# toon-token-savings

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: employee_records.json
pipelines/: langgraph.md  mcp_server.md
python-backend/: Dockerfile  requirements.txt
python-backend/src/: dataset.py  models_info.py  server.py
react-frontend/: .env.example  Dockerfile  README.md  craco.config.js  nginx.conf  package-lock.json  package.json
react-frontend/public/: index.html
react-frontend/public/data/: employee_records.json
react-frontend/src/: App.js  App.test.js  config.js  pricingConfig.js
react-frontend/src/components/: ContextRadar.js  DatasetDownload.js  InfrastructureMetrics.js  ResultCharts.js  UploadForm.js
react-frontend/src/store/: appSlice.js  index.js
src/: __init__.py  app.py  dataset.py  server.py  token_counter.py  visualization.py
tests/: conftest.py  test_dataset.py  test_server.py  test_token_counter.py
